# GovPress_PDF_MD

./: .dockerignore  .gitignore  12.md  AGENTS.md  CLAUDE.md  CONVERSION_RULES.md  GovPress_PDF_MD.spec  LICENSE  README.md  app.py  build_windows.bat  build_windows_nuitka.bat  hwpx_table_inspector.py  requirements.txt  tell2.md  tell_short.md  windows_version_info.txt  wrangler.jsonc
archive/: README.md
artifacts/: press_release_156753088_datacontents.html
backup_pre_json_pipeline/: converter.py  markdown_postprocessor.py
config/: read_shortlinks.json
docs/: 2026-04-05-work-log.md  2026-04-09-work-log.md  conversion-rules.md  conversion-work-principles.md  development.md  mobile-backend.md  packaging.md  policy-briefing-qc-status-2026-04-12.md  release-notes-2026-04-13-edge-stabilization.md  serverw-split-edge-runbook.md  troubleshooting.md  vps-auto-deploy.md  work-log-2026-03-30.md
installer/: GovPress_PDF_MD.iss
licenses/: README.md  THIRD_PARTY_NOTICES.txt
mobile/: App.tsx  README.md  app.json  package-lock.json  package.json  tsconfig.json
mobile/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
mobile/src-tauri/capabilities/: default.json
mobile/src-tauri/icons/: icon.icns
mobile/src-tauri/src/: lib.rs  main.rs
packaging/: build_windows.bat  build_windows_nuitka.bat
scripts/: aggregate_policy_briefing_eval.py  backfill_policy_briefing_storage_pdfs.py  build_curated_benchmark_page.py  build_hardest_policy_briefing_page.py  build_official_benchmark_page.py  build_policy_briefing_benchmark_page.py  build_policy_briefing_qc_dashboard.py  (+27 more)
(+780 files in other folders)
